...
    var body: some View {
        NavigationStack {
            ZStack {
                    VStack(spacing: 0) {
                    if !isListExpanded {
                        HStack {
                            Text("Carb Clarity")
                                .font(.largeTitle)
                                .fontWeight(.bold)
                                .foregroundColor(.primary)
                            Spacer()
                        }
                        .padding(.horizontal, 20)
...
                    }
                    
                    if !isListExpanded {
                        VStack {
                            VStack {
                                if viewModel.isExceedingCarbLimit {
                                    Text("⚠️ You are exceeding your carb limit ⚠️")
                                        .foregroundStyle(Color.red)
                                        .padding()
                                }
                                
                                VStack(spacing: 8) {
                                    Text("Today's total carb intake")
                                        .multilineTextAlignment(.center)
                                        .font(.headline)
                                        .foregroundColor(.secondary)
                                    Text(viewModel.totalCarbsForTodayString)
                                        .padding(.horizontal, 20)
                                        .font(.system(size: 150))
...
                                    .padding(.horizontal, 5)
                                    .transition(.opacity.combined(with: .scale))
                            }
                            
                            Spacer().frame(height: 20.0)
                            HStack(spacing: 12) {
                                TextField("New carbs in grams", value: $viewModel.inputValue, format: .number)
                                    .padding(.all, 5.0)
                                    .textFieldStyle(.roundedBorder)
                                    .keyboardType(.decimalPad)
                                    .focused($isFocused)
                                    .accessibilityIdentifier("New carbs in grams")
                                    .frame(width: 180)
                                Button(action: addItem) {
                                    Label("Add", systemImage: "plus")
                                        .disabled(!viewModel.canAddEntry)
                                }
                                .accessibilityIdentifier("Add")
                            }
                            .frame(maxWidth: .infinity)
                            .padding(.horizontal, 16)
...
                        }
                        .accessibilityIdentifier("Food Lookup")
                    }
                }
                ToolbarItem(placement: .navigationBarTrailing) {
                    EditButton()
                        .accessibilityIdentifier("Edit")
                }
                #if DEBUG
                // The mock data generator makes it easy to create realistical
                // mock data for screenshots and testing. To use it, add the file
                // MockDataGenerator.swift to the CarbClarity target and uncomment the following code.
//                ToolbarItem(placement: .navigationBarTrailing) {
...
