...
    
    init() {
        // Initialize app information
        self.appVersion = Bundle.main.infoDictionary?["CFBundleShortVersionString"] as? String ?? "Unknown"
        self.buildNumber = Bundle.main.infoDictionary?["CFBundleVersion"] as? String ?? "Unknown"
        self.aboutText = "Carb Clarity"
        self.copyrightText = "©️ 2024–2025 René Fouquet"
        self.supportText = "For questions and feedback, send me an [email](mailto:support@fouquet.me) or find me on [Mastodon](https://mastodon.social/@renef)."
        self.ossText = "Carb Clarity is Open Source Software! You can find the source code on [GitHub](https://github.com/fouquet/CarbClarity). If you want to contribute, please fork the repository and submit a pull request. You can also open an issue on GitHub if you have any problems or suggestions."
    }
    
    
    var versionText: String {
...
